--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "hw2",
+  "homepage": "https://kristinarud.github.io/marvel",
+  "name": "marvel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "setup": "npm i --unsafe-perm",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -38,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "sass": "^1.60.0"
   }
 }
