--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,12 +19,13 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-native-svg": "^13.1.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "setup": "npm i --unsafe-perm",
     "start": "react-scripts start",
